samples/_failures_safe/1761001879_894b94_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d5d7bd8.c: In function ‘main’:
./samples/SAFE/__tmp_4d5d7bd8.c:130:12: error: missing terminating " character
  130 |     printf("Press Ctrl+D (
      |            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4d5d7bd8.c:130:5: error: expected expression at end of input
  130 |     printf("Press Ctrl+D (
      |     ^~~~~~
./samples/SAFE/__tmp_4d5d7bd8.c:130:5: error: expected declaration or statement at end of input
